tetrate/tis0901/.chainsaw-test/bad-resource.yaml
apiVersion: telemetry.istio.io/v1
kind: Telemetry
metadata:
  name: telemetry-without-providers
  namespace: example-namespace
spec:
  accessLogging: []
  metrics: []
