tetrate/tis0901/.chainsaw-test/good-resource.yaml
apiVersion: telemetry.istio.io/v1
kind: Telemetry
metadata:
  name: telemetry-with-providers
spec:
  accessLogging:
  - providers:
    - name: envoy
  metrics:
  - providers:
    - name: envoy
