tetrate/tis0901/.chainsaw-test/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-telemetry-non-empty-provider
spec:
  validationFailureAction: Enforce
