tetrate/tis0901/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test-check-telemetry-non-empty-provider
spec:
  steps:
    - name: apply-telemetry-policy
      try:
        - apply:
            file: ../check-telemetry-non-empty-provider.yaml
        - assert:
            file: policy-assert.yaml
         
    - name: apply-good-resource
      try:
        - apply:
            file: good-resource.yaml

    - name: apply-bad-resource (should fail)
      try:
        - apply:
            expect:
              - check:
                  ($error != null): true
            file: bad-resource.yaml
